@@ -2,7 +2,7 @@
 
 ## Required Java version
 
-First, download and install [JDK 19](https://jdk.java.net/20/). Java-GI uses the "Panama" Foreign Function & Memory API that is available as a preview feature in JDK 20.
+First, download and install [JDK 20](https://jdk.java.net/20/). Java-GI uses the "Panama" Foreign Function & Memory API that is available as a preview feature in JDK 20.
 
 Please be aware that the Panama API is still under development. You will need to pass the `--enable-preview` parameter when compiling and running Java-GI applications.
 
@@ -10,16 +10,35 @@ Please be aware that the Panama API is still under development. You will need to
 
 First of all, make sure that the native GLib, Gtk and/or GStreamer libraries are installed on your operating system.
 
-Next, download the jar files with the Java bindings from [Github](https://github.com/jwharm/java-gi). The jar files are published as artifacts under the v0.5 release. At a minimum, you will need to download the GLib bindings jar. Additionally, download the Gtk, Adwaita and/or GStreamer bindings, and add the jars to the classpath of your project.
+Next, add the dependencies as described on [JitPack.io](https://jitpack.io/#jwharm/java-gi/v0.5.1):
 
-It is recommended to download the Javadoc documentation and sources, to assist during the development of your GTK application.
+```groovy
+allprojects {
+	repositories {
+		mavenCentral()
+		maven { url 'https://jitpack.io' }
+	}
+}
+
+dependencies {
+    // For the @Nullable/@NotNull annotations
+    compileOnly 'org.jetbrains:annotations:24.+'
+    // Include the libraries you want to use. You will at the very least want to include GLib.
+    implementation 'com.github.jwharm.java-gi:glib:v0.5.1'
+    implementation 'com.github.jwharm.java-gi:gtk:v0.5.1'
+    implementation 'com.github.jwharm.java-gi:adwaita:v0.5.1'
+    implementation 'com.github.jwharm.java-gi:gstreamer:v0.5.1'
+}
+```
+
+Furthermore, you must set the Java language version to 20. And while the Panama foreign function API is still in preview status, set the `--enable-preview` option to the compile and execution tasks. To suppress warnings about native access, also add `--enable-native-access=ALL-UNNAMED`. See [this `build.gradle` file](https://github.com/jwharm/java-gi-examples/blob/main/HelloWorld/build.gradle) for a complete example.
 
 ## Modules
 
-The following modules are available:
+For module-based applications (with a `module-info.java` file), the following modules are available:
 
 * org.gnome.glib
-    * org.freesdesktop.gstreamer
+    * org.freedesktop.gstreamer
     * org.gnome.gtk
         * org.gnome.adwaita
 
@@ -74,4 +93,4 @@ public class HelloWorld {
 
 Because the Panama foreign function API is still in preview status, add the `--enable-preview` command-line parameter both when **compiling** and **running** your application.
 
-To suppress warnings about native access, add a command-line parameter `--enable-native-access=org.gnome.glib` (and all other modules that you use).
+To suppress warnings about native access, add a command-line parameter `--enable-native-access=ALL-UNNAMED`. For module-based applications, add `--enable-native-access=org.gnome.glib` (and all other modules that you use) instead.
